<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:paddingBottom="20dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="24dp"
        android:text="@string/create_user"
        android:textColor="@color/black_primary"
        android:textSize="20sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:paddingEnd="8dp"
        android:paddingStart="24dp">

        <com.quickenloans.referexpress.views.old.ValidationImageView
            android:id="@+id/iv_firstNameValidation"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:padding="12dp"
            android:src="@drawable/ic_validation_yes"
            android:visibility="invisible"
            tools:visibility="visible" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/iv_firstNameValidation"
            android:hint="@string/first_name"
            android:inputType="textCapSentences"
            app:met_errorColor="@color/red"
            app:met_floatingLabel="normal"
            app:met_primaryColor="@color/primary_green"
            app:met_singleLineEllipsis="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:paddingEnd="8dp"
        android:paddingStart="24dp">

        <com.quickenloans.referexpress.views.old.ValidationImageView
            android:id="@+id/iv_lastNameValidation"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:padding="12dp"
            android:src="@drawable/ic_validation_yes"
            android:visibility="invisible"
            tools:visibility="visible" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/iv_lastNameValidation"
            android:hint="@string/last_name"
            android:inputType="textCapSentences"
            app:met_errorColor="@color/red"
            app:met_floatingLabel="normal"
            app:met_primaryColor="@color/primary_green"
            app:met_singleLineEllipsis="true" />
    </RelativeLayout>

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginBottom="24dp"
        android:paddingEnd="8dp"
        android:paddingStart="24dp">

        <com.quickenloans.referexpress.views.old.ValidationImageView
            android:id="@+id/iv_emailValidation"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:padding="12dp"
            android:src="@drawable/ic_validation_yes"
            android:visibility="invisible"
            tools:visibility="visible" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/iv_emailValidation"
            android:ems="10"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            app:met_errorColor="@color/red"
            app:met_floatingLabel="normal"
            app:met_primaryColor="@color/material_blue"
            app:met_singleLineEllipsis="true" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlayout_optionButtons"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:padding="8dp">

        <Button
            android:id="@+id/btn_cancel"
            style="@style/textButtonStyle"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="8dp"
            android:layout_toStartOf="@+id/btn_clear"
            android:text="@string/cancel"
            android:textColor="@color/button_text_selector_green" />

        <Button
            android:id="@+id/btn_clear"
            style="@style/textButtonStyle"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="8dp"
            android:layout_toStartOf="@+id/btn_finish"
            android:text="@string/clear"
            android:textColor="@color/button_text_selector_green" />

        <Button
            android:id="@+id/btn_finish"
            style="@style/textButtonStyle"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:enabled="false"
            android:text="@string/accept"
            android:textColor="@color/button_text_selector_green" />

    </RelativeLayout>


</LinearLayout>