<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_intro"
            style="@style/TextHeaderNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="48dp"
            android:text="@string/form_name_into_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_firstName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            android:layout_marginTop="62dp"
            android:ems="15"
            android:hint="@string/first_name"
            android:inputType="textCapSentences"
            android:minHeight="72dp"
            app:layout_constraintHorizontal_bias="0.476"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_intro"
            app:met_floatingLabel="normal"
            app:met_primaryColor="@color/primary_green"
            app:met_singleLineEllipsis="true" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_lastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_firstName"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            android:layout_marginTop="16dp"
            android:ems="15"
            android:hint="@string/last_name"
            android:inputType="textCapSentences"
            app:layout_constraintHorizontal_bias="0.526"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_firstName"
            app:met_floatingLabel="normal"
            app:met_primaryColor="@color/primary_green"
            app:met_singleLineEllipsis="true" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="140dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ism_guy_thinking"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_lastName"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>
