<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/llayout_addButtons">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_intro"
                style="@style/TextHeaderNormal"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginEnd="28dp"
                android:layout_marginLeft="28dp"
                android:layout_marginRight="28dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="48dp"
                android:text="@string/form_contact_into_text"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_invalidPhoneNumberTypesError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/error_phone_types"
                android:textColor="@color/red"
                android:textSize="13sp"
                android:visibility="gone"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                tools:visibility="visible"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/llayout_emailItems" />

            <TextView
                android:id="@+id/tv_nonUniquePhoneNumbersError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/error_phone_unique"
                android:textColor="@color/red"
                android:textSize="13sp"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_invalidPhoneNumberTypesError"
                tools:visibility="visible" />

            <LinearLayout
                tools:layout_height="48dp"
                tools:layout_width="match_parent"
                tools:background="@color/orange"
                android:id="@+id/llayout_phoneItems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_nonUniquePhoneNumbersError"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_intro" />

            <LinearLayout
                tools:layout_height="48dp"
                tools:layout_width="match_parent"
                tools:background="@color/material_blue"
                android:id="@+id/llayout_emailItems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/llayout_phoneItems"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ism_girl_phone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_nonUniquePhoneNumbersError"
                app:layout_constraintHorizontal_bias="0.0"
                android:id="@+id/imageView4" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/llayout_addButtons"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_alignParentBottom="true"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5">

            <Button
                android:id="@+id/btn_addEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:fontFamily="sans-serif-black"
                android:text="@string/add_email"
                android:textColor="@color/button_text_selector_green"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5">

            <Button
                android:id="@+id/btn_addPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:fontFamily="sans-serif-black"
                android:text="@string/add_phone"
                android:textColor="@color/button_text_selector_green"
                android:textSize="16sp" />

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>